syntax = "proto3";

package api;

option go_package = "github.com/vv-sam/otus-project/proto/grpc/api";

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_QUEUED = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_OK = 3;
  TASK_STATUS_DELETED = 4;
}

message Task {
  string id = 1;
  TaskStatus status = 2;
  string type = 3;
}

service TaskService {
  rpc GetById(GetTaskByIdRequest) returns (GetTaskByIdResponse);
  rpc GetAll(GetAllTasksRequest) returns (GetAllTasksResponse);
  rpc Post(PostTaskRequest) returns (PostTaskResponse);
  rpc Put(PutTaskRequest) returns (PutTaskResponse);
  rpc Delete(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message GetTaskByIdRequest {
  string id = 1;
}

message GetTaskByIdResponse {
  Task task = 1;
}

message GetAllTasksRequest {
}

message GetAllTasksResponse {
  repeated Task tasks = 1;
}

message PostTaskRequest {
  Task task = 1;
}

message PostTaskResponse {
}

message PutTaskRequest {
  string id = 1;
  Task task = 2;
}

message PutTaskResponse {
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
}